Bug 319728 - After changing format of short date format input fields become screwed up
Summary: After changing format of short date format input fields become screwed up
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.3
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL: http://www.forwiss.uni-passau.de/~ber...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-12 17:19 UTC by M G Berberich
Modified: 2013-11-11 14:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description M G Berberich 2013-05-12 17:19:57 UTC
After changing the sort-date-format to “WOCHENTAGKURZ, tT.mM.JJJJ” on a german system to get short dates like “So. 12.5.2013” the date-input filed gets screwed up and displayes something like “12vorm.05vorm.2013” and behaves strange if trying to edit.

Reproducible: Always

Steps to Reproduce:
1. Change short-date-format in preferences to “WOCHENTAGKURZ, tT.mM.JJJJ”
2. try to enter new entry
Comment 1 allan 2013-05-12 18:26:20 UTC
On Sun, 12 May 2013 17:20:21 +0000
M G Berberich <kde@oss.m-berberich.de> wrote:

> https://bugs.kde.org/show_bug.cgi?id=319728
> 
> M G Berberich <kde@oss.m-berberich.de> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>             Summary|After changing format of    |After changing
> format of |short date format input     |short date format input
>                    |fields becomes screwed up   |fields become
> screwed up
> 

I don't have German, but should you be using long date format, the
translation of something like "SHORTWEEKDAY dD mM YYYY"?

Allan
Comment 2 M G Berberich 2013-06-01 18:48:25 UTC
Problem still exists in 4.6.3
Comment 3 Thomas Baumgart 2013-06-02 08:54:14 UTC
Git commit baba4bf17ac4decdd6a5427effab17b663079595 by Thomas Baumgart.
Committed on 02/06/2013 at 10:48.
Pushed by tbaumgart into branch 'master'.

Don't mess up date input display format

Using any meta-character other than day, month or year in the KDE global
short date format setting screwed up the KMyMoney date input fields.

E.g. "%a, %d.%m.%y" caused the 'a' to be taken as separator where it
should have been the dot.

M  +17   -7    kmymoney/widgets/kmymoneydateinput.cpp

http://commits.kde.org/kmymoney/baba4bf17ac4decdd6a5427effab17b663079595
Comment 4 Thomas Baumgart 2013-06-02 09:24:01 UTC
Git commit 72e7d858d7f287ee471eae7f6d3ca1d05152aac0 by Thomas Baumgart.
Committed on 02/06/2013 at 10:48.
Pushed by tbaumgart into branch '4.6'.

Don't mess up date input display format

Using any meta-character other than day, month or year in the KDE global
short date format setting screwed up the KMyMoney date input fields.

E.g. "%a, %d.%m.%y" caused the 'a' to be taken as separator where it
should have been the dot.
(cherry picked from commit baba4bf17ac4decdd6a5427effab17b663079595)

M  +17   -7    kmymoney/widgets/kmymoneydateinput.cpp

http://commits.kde.org/kmymoney/72e7d858d7f287ee471eae7f6d3ca1d05152aac0