Don't mess up date input display format

Using any meta-character other than day, month or year in the KDE global
short date format setting screwed up the KMyMoney date input fields.

E.g. "%a, %d.%m.%y" caused the 'a' to be taken as separator where it
should have been the dot.

BUG: 319728
(cherry picked from commit baba4bf17ac4decdd6a5427effab17b663079595)